--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,5 +32,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.SkinCache.CompileShaders=True
-r.RayTracing=True
+r.RayTracing=False
 
